# zero-updater

./: README.md  pyproject.toml
zero_updater/: __init__.py  _pb.py  ble.py  cli.py  client.py
zero_updater/proto/: application_pb2.py  desktop_pb2.py  flipper_pb2.py  gpio_pb2.py  gui_pb2.py  property_pb2.py  storage_pb2.py  system_pb2.py
