[project]
name = "zero-updater"
version = "0.1.0"
description = "Flipper Zero RPC client and updater over BLE"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21",
    "protobuf>=5.0",
]

[project.scripts]
zero-updater = "zero_updater.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zero_updater*"]
